--- a/NodeJS_SuperChat/package.json
+++ b/NodeJS_SuperChat/package.json
@@ -1,9 +1,17 @@
 {
   "name": "node-js_super-chat",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "NodeJS_SuperChat",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "Simon Nyssen"
+  },
+  "dependencies": {
+    "ent": "^2.2.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
+    "morgan": "^1.9.1",
+    "socket.io": "^2.1.1"
   }
 }
